--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TYk-Tyk",
+  "name": "TYkTyk",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://sasha1637.github.io/TYk-Tyk/",
