--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "TYkTyk",
+  "name": "qqqqqq",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sasha1637.github.io/TYk-Tyk/",
+  "homepage": "https://sasha1637.github.io/qqqqqq/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
